# request/gamematch.go
@@ -1,6 +1,6 @@
 package request
 
-type CreateGamematch struct {
+type CreateMatchpointGamematch struct {
 	CompanyID      string `json:"companyId" validate:"required"`
 	GameID         string `json:"gameId" validate:"required"`
 	MatchName      string `json:"matchName" validate:"required"`
@@ -17,6 +17,20 @@ type CreateGamematch struct {
 		LeftScore  int64 `json:"leftScore" validate:""`
 		RightScore int64 `json:"rightScore" validate:""`
 	} `json:"gameMatchScores"`
+	Ball int64 `json:"ball" validate:""`
+}
+
+type CreateMatchGamematch struct {
+	CompanyID      string `json:"companyId" validate:"required"`
+	GameID         string `json:"gameId" validate:"required"`
+	MatchName      string `json:"matchName" validate:"required"`
+	IsRubber       bool   `json:"isRubber" validate:""`
+	GameMatchTeams []struct {
+		Name                 string `json:"name" validate:"required"`
+		GameMatchTeamPlayers []struct {
+			PlayerID string `json:"playerId" validate:"required"`
+		} `json:"gameMatchTeamPlayers"`
+	} `json:"gameMatchTeams"`
 	Ball int64 `json:"ball" validate:""`
 }
 
